<resources>
    <string name="app_name">Trabalho 02</string>
    <string name="cadastrar_funcionario">Cadastrar Funcionário</string>
    <string name="nome">Nome</string>
    <string name="codigo">Código</string>
    <string name="material">Material</string>
    <string name="peso">Peso</string>
    <string name="cor">Cor</string>
    <string name="inserir">Inserir</string>
    <string name="salario_funcionario">Salário</string>
    <string name="titulo_tela_funcionario">Cadastro de Funcionário</string>
    <string name="cpf_funcionario">CPF</string>
    <string name="funcao_funcionario">Função</string>
    <string name="titulo_tela_posto">Controle Posto de Gasolina</string>
    <string name="titulo_inserir_posto">Inserir Posto</string>
    <string name="cnpj">CNPJ</string>
    <string name="cidade">Cidade</string>
    <string name="caixa">Caixa</string>
    <string name="volume_armazenado">Volume Armazenado</string>
    <string name="quantidade_funcionarios">Quantidade Funcionários</string>
    <string name="inserir_posto">Inserir Posto</string>
    <string name="titulo_tela_mostra_postos">Postos Cadastrados</string>
    <string name="home">Home</string>
    <string name="atualizar_postos">Atualizar Postos</string>
    <string name="atualizar">Atualizar</string>
    <string name="posto_atualizado">Posto Atualizado com Sucesso</string>
    <string name="remover_postos">Remover Postos</string>
    <string name="buscar">Buscar</string>
    <string name="remover">Remover</string>
    <string name="o_posto_vai_aparecer_aqui">O POSTO VAI APARECER AQUI</string>
    <string name="empresa_de_moveis">Empresa de Móveis</string>
    <string name="cadeira">Cadeira</string>
    <string name="cama">Cama</string>
    <string name="estante">Estante</string>

    <string-array name="opcoesCRUD">
        <item>Inserir Posto</item>
        <item>Mostrar Postos</item>
        <item>Atualizar Posto</item>
        <item>Remover Postos</item>
        <item>Mostrar Caixa Total</item>
        <item>Mostrar Postos Abaixo de 1000L</item>
    </string-array>

    <string-array name="opcoesExec">
        <item>Exercício Funcionário</item>
        <item>Exercício Posto</item>
        <item>Exercício Empresa de Móveis</item>
        <item>Exercício Curso</item>
    </string-array>

    <string-array name="opcoes_crud_movel">
        <item>Inserir Móvel</item>
        <item>Mostrar Móveis</item>
        <item>Atualizar Móveis</item>
        <item>Excluir Móvel</item>
    </string-array>

    <string-array name="opcoesMoveis">
        <item>Cadeira</item>
        <item>Cama</item>
        <item>Estante</item>
    </string-array>

</resources>