<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaInserirPosto">

    <TextView
        android:id="@+id/titulo_tela_inserir_posto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_inserir_posto"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_cnpj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/et_cnpj"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/cnpj"
        app:layout_constraintBottom_toTopOf="@+id/et_cidade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_tela_inserir_posto"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/et_cidade"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/cidade"
        app:layout_constraintBottom_toTopOf="@+id/et_caixa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cnpj"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/et_caixa"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/caixa"
        app:layout_constraintBottom_toTopOf="@+id/et_volume"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cidade"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/et_volume"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/volume_armazenado"
        app:layout_constraintBottom_toTopOf="@+id/et_qtd_funcionarios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_caixa"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/et_qtd_funcionarios"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/quantidade_funcionarios"
        app:layout_constraintBottom_toTopOf="@+id/btn_inserir_posto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_volume"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn_inserir_posto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inserir_posto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_qtd_funcionarios"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>