<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaRemoverPosto">

    <TextView
        android:id="@+id/titulo_tela_remover_posto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remover_postos"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_busca_posto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/et_busca_posto"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/cnpj"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btn_buscar_posto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_tela_remover_posto"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn_buscar_posto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscar"
        app:layout_constraintBottom_toTopOf="@+id/tv_posto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_busca_posto"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tv_posto"
        android:layout_width="391dp"
        android:layout_height="72dp"
        android:text="@string/o_posto_vai_aparecer_aqui"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_remove_posto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_buscar_posto"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn_remove_posto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remover"
        app:layout_constraintBottom_toTopOf="@+id/btn_home_tela_remover_posto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_posto"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn_home_tela_remover_posto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_remove_posto"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>